--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,91 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  background-color: rgb(220, 167, 232);
+}
+.inicio{
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.app {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;  
+  padding: 30px; 
+  width: min(400px, 100%);
+  border-radius: 15px;
+  position: relative;
+  background-color: rgb(26, 213, 213);
+  /* background-color: rgb(235, 107, 107); */
+  /* background-color: rgb(8, 185, 108); */
+}
+.app__country{
+  color: white;
+  font-size: 30px;
+ 
+  margin-bottom: 3px;
+  
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.app__img{  
+  
+  margin: 0 auto;
+  border-top:2px solid white ;
+  border-bottom:2px solid white ;
+
+  
+}
+.app__core{
+  border-bottom: 2px solid white;
+  text-align: center;
+  margin-top: 0;
+  padding-top: 0;
+  padding-bottom: 0;
+  margin-bottom: 0;
+  
+}
+.app__core-grade{
+  color: white;
+  font-size: 50px;
+  margin-top: 0;
+  
+  margin-bottom: 0;
+}
+.app__core-button{
+  border: none;
+  padding: 5px;
+  color: white;
+  background-color: rgb(220, 167, 232);
+  border-radius: 10px;
+}
+.app__core-description{
+  margin-top: 0;
+  margin-bottom: 5px;
+  color: white;
+  font-size: 30px;
+  
+}
+.app__secondary{
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+  font-size: 20px;
+  flex-wrap: wrap;
+  
+}
+.app__secondary-date{
+  text-align: center;
+}
+.app__secondary p{
+  color: white;
+  
+}
+.app__secondary i{
+  margin-top: 20px;
+  color: white;
+  font-size: 30px;
+  
 }
