--- a/src/index.css
+++ b/src/index.css
@@ -60,6 +60,7 @@ body {
   color: white;
   background-color: rgb(220, 167, 232);
   border-radius: 10px;
+  margin-bottom: 4px;
 }
 .app__core-description{
   margin-top: 0;
@@ -88,4 +89,21 @@ body {
   color: white;
   font-size: 30px;
   
+}
+.spinner {
+  border: 4px solid rgba(0, 0, 0, .1);
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  border-left-color: white;
+  animation: spin 1s ease infinite;
+
+}
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
